fix:spacing updated in sidebar and dashbaord and zoom implemented in AI upload page

--- a/src/index.css
+++ b/src/index.css
@@ -125,8 +125,8 @@ body {
   }
 
   .sidebar-item {
-    @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-1 rounded-lg p-3 text-base text-slate-950 transition-colors hover:bg-gray-200 hover:text-slate-950 dark:text-slate-50 dark:hover:bg-gray-800;
-  }
+    @apply flex w-full items-center font-medium gap-1 rounded-lg p-1.5 my-2 text-xs text-slate-950 transition-colors hover:bg-slate-200 hover:text-slate-950 dark:text-slate-50 dark:hover:bg-slate-900;
+  } 
 
   .sidebar-item.active {
     @apply bg-gray-300 font-medium text-slate-950 dark:bg-gray-800 dark:text-slate-50;
